# ask-mirror-talk

./: .dockerignore  .env  .env.example  .env.railway  .gitignore  .neon  ACTION_ITEMS_NOW.md  ACTION_PLAN_LOW_CHUNK_EPISODES.md  ANALYTICS_COMPLETE_SUMMARY.md  ANALYTICS_INTEGRATION_FIX.md  ANSWER_EXAMPLES.md  ARCHITECTURE_FLOW.md  ARCHITECTURE_NEXT_STEPS.md  AUDIO_COMPRESSION_COMPLETE.md  AUTOMATED_MONITORING_ACTIVE.md  BUG_FIX_READY.md  CAMPAIGN_LAUNCH_PACK.md  CARD_AB_TESTING_GUIDE.md  CARD_COMPLETENESS_SUMMARY.md  CARD_FEEDBACK_2026-04-21.md  CARD_TEMPLATE_SELECTION.md  CARD_TEXT_VALIDATION_FLOW.md  CITATIONS_COMPLETE_SUMMARY.md  CITATION_HTML_UPDATED.md  CLEANUP_SUMMARY.md  CLICKABLE_CITATIONS_UPDATE.md  COMPLETE_DEPLOYMENT_SUMMARY.md  COMPLETE_FIX_SUMMARY.md  COPY_PASTE_FIX.md  CORS_403_FIX_FINAL.md  CORS_FIX_DEPLOY_NOW.md  CRITICAL_STARTUP_FIX.md  CURRENT_STATUS_ACTION_PLAN.md  DEBUGGING_GUIDE.md  DEBUG_CHECKLIST.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_CHECKLIST_FINAL.md  DEPLOYMENT_PACKAGE_v5.6.0.md  DEPLOYMENT_PACKAGE_v5.7.0.md  DEPLOYMENT_PACKAGE_v5.8.1.md  (+149 more)
ask_mirror_talk.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
docs/: ALTERNATIVE_HOSTING.md  EMPTY_RESULTS_FIX.md  GITHUB_MIRROR_SETUP.md  INGESTION_SPEEDUP.md  MIGRATION_COMPLETE.md  MIGRATION_GUIDE.md  RAILWAY_DEPLOYMENT.md  RENDER_DEPLOYMENT.md  RESTART_WITHOUT_PKILL.md
scripts/: FIXTURE_TESTING_GUIDE.md  README_MONITORING.md  analytics_queries.py  analyze_daily_logs.sh  analyze_episode_engagement.py  analyze_theme_performance.py  analyze_weak_matches.py  auto_tune_quote_selector.py  bulk_ingest.py  (+69 more)
(+200 files in other folders)
