[project]
name = "ask-mirror-talk"
version = "0.1.0"
description = "Mirror Talk - Ask Mirror Talk service"
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}
authors = [
  {name = "Mirror Talk"}
]

dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.2.0",
  "sqlalchemy>=2.0.0",
  "psycopg[binary]>=3.1.0",
  "pgvector>=0.2.5",
  "alembic>=1.13.0",
  "httpx>=0.27.0",
  "feedparser>=6.0.11",
  "apscheduler>=3.10.4",
  "tenacity>=8.3.0",
  "python-multipart>=0.0.9",
  "python-dotenv>=1.0.1"
]

[project.optional-dependencies]
transcription = ["faster-whisper>=1.0.0"]
embeddings = ["sentence-transformers>=2.6.0"]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
exclude = ["wordpress*", "docs*", "scripts*"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
